--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ body {
 }
 
 .navbar {
-  margin: 0 auto;
-  display:inline-block;
+
+  overflow: hidden;
   background-color: #fff;
   position: fixed;
   top: 0;
@@ -33,10 +33,13 @@ body {
     text-decoration: none;
     margin: 0 0.5rem;
     padding: 0.5rem;
+  }
 
-    &:hover {
-      text-decoration-color: $color-orange;
-    }
+  .icon {
+    color: $color-orange;
+    display: none;
+    height: 50px;
+    width: 50px;
   }
 
 }
@@ -115,6 +118,7 @@ body {
 }
 
 .header-main {
+  display: block;
   height: 300px;
   background: $color-orange;
   border-radius: 0 0 50% 50%;
@@ -132,10 +136,64 @@ body {
   background: #fff;
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (max-width: 970px) {
 
+
+  .navbar  {
+    a:not(.logo):not(.icon) {
+      display: none;
+    }
+
+    .icon {
+      display:block;
+    }
+
+  }
+  .topbar-logo-ad-search {
+    float: right;
+  }
+
+  .topbar-nav {
+    display: block;
+  }
+  .header-main {
+    display: none;
+  }
+
+  .navbar {
+    &.responsive {
+      .topbar-logo-ad-search {
+        float: none;
+        a {
+          display: block;
+          text-align: left; 
+          img {
+            vertical-align: middle;
+          }
+          &:last-child {
+            border-bottom: solid 1px #000;
+          }
+        }
+      }
+
+      .topbar-nav {
+        float: none;
+        a {
+          display: block;
+          text-align: left; 
+          img {
+            display: inline-block;
+          }
+        }
+      }
+    }
+  }
+  
+
+    
 }
 
-@media only screen and (min-width: 970px) {
+@media only screen and (max-width: 480px) {
+
 
 }
