--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body {
 
 .button-newad {
   background-color: #ff6e14;
-  color: white !important;
+  color: #fff !important;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
@@ -144,7 +144,6 @@ body {
 .main {
   position: relative;
   height: 1500px;
-  background-color: #f1befc;
   z-index: 4;
 }
 
@@ -165,8 +164,131 @@ body {
   width: 80%;
   height: 1300px;
   background: #fff;
+  border-radius: 5px;
 }
 
+.form-box {
+  margin: 4rem auto;
+  width: 80%;
+  box-shadow: 0 -1px 4px 0 rgba(26, 26, 26, 0.08), 0 4px 8px 0 rgba(26, 26, 26, 0.12);
+}
+
+.l-radio {
+  padding: 10px;
+  border-radius: 50px;
+  display: inline-block;
+  cursor: pointer;
+  transition: background 0.2s ease;
+  margin: 8px 0;
+  -webkit-tap-highlight-color: transparent;
+}
+.l-radio:hover, .l-radio:focus-within {
+  background: rgba(255, 110, 20, 0.1);
+}
+.l-radio input {
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background: none;
+  border: 0;
+  box-shadow: inset 0 0 0 1px #000;
+  box-shadow: inset 0 0 0 1.5px #000;
+  appearance: none;
+  padding: 0;
+  margin: 0;
+  transition: box-shadow 150ms cubic-bezier(0.95, 0.15, 0.5, 1.25);
+  pointer-events: none;
+}
+.l-radio input:focus {
+  outline: none;
+}
+.l-radio input:checked {
+  box-shadow: inset 0 0 0 6px #ff6e14;
+}
+.l-radio span {
+  vertical-align: middle;
+  display: inline-block;
+  line-height: 20px;
+  padding: 0 8px;
+}
+
+.input-box {
+  display: block;
+  padding: 10px 40px;
+}
+.input-box .category {
+  background: #e5e5f8;
+  width: 200px;
+  line-height: 40px;
+  padding: 0 20px;
+}
+.input-box .category .menu:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: #ff6e14;
+  right: 20px;
+  top: -10px;
+  transform: rotate(45deg);
+  z-index: -1;
+}
+.input-box .category [id^=btn]:checked + ul {
+  display: block;
+}
+.input-box .category input {
+  display: none;
+}
+.input-box .category .b-dropdown {
+  display: inline;
+  cursor: pointer;
+}
+.input-box .category span {
+  float: right;
+  line-height: 35px;
+}
+.input-box .category ul {
+  position: absolute;
+  background: #fff;
+  list-style: none;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  display: none;
+}
+.input-box .category ul li {
+  line-height: 40px;
+  padding: 8px 20px;
+  cursor: pointer;
+}
+.input-box .category ul li a {
+  color: #000;
+  text-decoration: none;
+  display: block;
+}
+.input-box .category ul li a:hover {
+  background: #f0b0e2;
+}
+.input-box .category ul li span {
+  float: right;
+  margin-top: 10px;
+  padding: 0 10px;
+  color: #000;
+}
+.input-box .category ul ul {
+  position: static;
+}
+.input-box .category ul ul li {
+  line-height: 30px;
+  padding-left: 30px;
+}
+.input-box .research {
+  display: inline;
+}
+.input-box .location {
+  display: inline;
+}
 @media only screen and (max-width: 970px) {
   .navbar a:not(.logo):not(.icon) {
     display: none;
@@ -209,6 +331,9 @@ body {
   }
   .navbar.responsive .topbar-nav a img {
     display: inline-block;
+  }
+  .navbar.responsive .icon {
+    float: right;
   }
 }
 
