--- a/style.css
+++ b/style.css
@@ -372,21 +372,75 @@ body {
 .delivery-save {
   display: inline-block;
   padding: 20px 40px;
-  width: 80%;
+  width: 100%;
 }
 .delivery-save .delivery {
   float: left;
-  padding: 30px 40px;
+  width: 50%;
+  padding-bottom: 20px;
 }
-.delivery-save .delivery button, .delivery-save .delivery img, .delivery-save .delivery .available-ad {
+.delivery-save .delivery .toggle-control, .delivery-save .delivery img, .delivery-save .delivery .available-ad {
   display: inline-block;
+  vertical-align: middle;
+}
+.delivery-save .delivery .available-ad {
+  padding-left: 70px;
+  padding-right: 10px;
+}
+.delivery-save .delivery .toggle-control {
+  display: block;
+  position: relative;
+  padding-left: 60px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  user-select: none;
+}
+.delivery-save .delivery .toggle-control input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.delivery-save .delivery .toggle-control input:checked ~ .control {
+  background-color: #ff6e14;
+}
+.delivery-save .delivery .toggle-control input:checked ~ .control:after {
+  left: 35px;
+}
+.delivery-save .delivery .toggle-control .control {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30px;
+  width: 60px;
+  border-radius: 15px;
+  background-color: darkgray;
+  transition: background-color 0.15s ease-in;
+}
+.delivery-save .delivery .toggle-control .control:after {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 15px;
+  background: white;
+  transition: left 0.15s ease-in;
 }
 .delivery-save .save {
+  text-align: right;
   float: right;
-  padding: 30px 40px;
+  width: 50%;
+  padding-bottom: 20px;
 }
 .delivery-save .save img, .delivery-save .save .save-search {
   display: inline-block;
+  color: #3838c5;
+  font-weight: bold;
+  vertical-align: middle;
 }
 
 @media only screen and (max-width: 970px) {
