--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,18 @@ $blue-pale: rgb(244, 244, 252);
 $color-blue: rgb(56, 56, 197);
 $box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 4px 8px 0 rgb(26 26 26 / 12%);
 
+$toggle-background-color-on: #ff6e14;
+$toggle-background-color-off: darkgray;
+$toggle-control-color: white;
+$toggle-width: 60px;
+$toggle-height: 30px;
+$toggle-gutter: 5px;
+$toggle-radius: 50%;
+$toggle-control-speed: .15s;
+$toggle-control-ease: ease-in;
+$toggle-radius: $toggle-height / 2;
+$toggle-control-size: $toggle-height - ($toggle-gutter * 2);
+
 html {
   font-family: "Open Sans",sans-serif,Arial;
   font-size: calc(1em * .625 + 0%);
@@ -391,21 +403,83 @@ body {
 .delivery-save {
   display: inline-block;
   padding: 20px 40px;
-  width: 80%;
+  width: 100%;
   .delivery {
     float: left;
-    padding: 30px 40px;
-    button, img, .available-ad {
+    width: 50%;
+    padding-bottom: 20px;
+    .toggle-control, img, .available-ad {
       display: inline-block;
+      vertical-align: middle;
     }
+
+    .available-ad {
+      padding-left: 70px;
+      padding-right: 10px;
+    }
+
+    .toggle-control {
+      display: block;
+      position: relative;
+      padding-left: $toggle-width;
+      margin-bottom: 12px;
+      cursor: pointer;
+      font-size: 22px;
+      user-select: none;
+    
+      input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+      }
+    
+      input:checked ~ .control {
+        background-color: $toggle-background-color-on;
+        
+        &:after {
+          left: $toggle-width - $toggle-control-size - $toggle-gutter;
+        }
+      }
+    
+      .control {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: $toggle-height;
+        width: $toggle-width;
+        border-radius: $toggle-radius;
+        background-color: $toggle-background-color-off;
+        transition: background-color $toggle-control-speed $toggle-control-ease;
+    
+        &:after {
+          content: "";
+          position: absolute;
+          left: $toggle-gutter;
+          top: $toggle-gutter;
+          width: $toggle-control-size;
+          height: $toggle-control-size;
+          border-radius: $toggle-radius;
+          background: $toggle-control-color;
+          transition: left $toggle-control-speed $toggle-control-ease;
+        }
+      }
+    }
+
+
   }
 
   .save {
+    text-align: right;
     float: right;
-    padding: 30px 40px;
-    
+    width: 50%;
+    padding-bottom: 20px;
     img, .save-search {
       display: inline-block;
+      color: $color-blue;
+      font-weight: bold;
+      vertical-align: middle;
     }
   }
   
