--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@ $color-white: #fff;
 $color-black: #000;
 $blue-pale: rgb(244, 244, 252);
 $color-blue: rgb(56, 56, 197);
+$color-blue-pastel: #8191a0;
 $box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 4px 8px 0 rgb(26 26 26 / 12%);
 
 $toggle-background-color-on: #ff6e14;
@@ -35,6 +36,11 @@ body {
   margin:0;
 }
 
+a {
+  text-decoration: none;
+  color: $color-black;
+}
+
 .navbar {
 
   overflow: hidden;
@@ -46,9 +52,7 @@ body {
   z-index: 5;
 
   a {
-    color: $color-black;
     text-align: center;
-    text-decoration: none;
     margin: 0 0.5rem;
     padding: 0.5rem;
   }
@@ -138,6 +142,7 @@ body {
   position: relative;
   height: 1500px; 
   z-index: 4;
+  
 }
 
 .header-main {
@@ -179,10 +184,6 @@ body {
   margin: 8px 0;
   -webkit-tap-highlight-color: transparent;
   
-  &:hover,
-  &:focus-within {
-    background: rgba($color-orange,.1)
-  }
   
   input {
     vertical-align: middle;
@@ -203,7 +204,6 @@ body {
       outline: none
     }
       
-    
     &:checked {
       box-shadow: inset 0 0 0 6px $color-orange;
     }
@@ -488,7 +488,7 @@ body {
 
 .ad-container {
   width: 100%;
-  padding: 5px 20px;
+  padding: 20px 0;
   display: block;
   font-size: 1.6rem;
   font-weight: bold;
@@ -514,6 +514,117 @@ body {
   }
   
 }
+
+.title {
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 2rem 0;
+}
+
+
+section, aside {
+  padding: 2rem 0;
+  display: block;
+
+  article {
+    border: solid 1px $color-blue-pastel;
+    border-radius: 10px;
+    width: 100%;
+    margin-bottom: 15px;
+    position: relative;
+
+    .description {
+      margin-top: 2rem;
+
+      a {
+        font-size: 2rem;
+        font-weight: bold;
+      }
+  
+      a:hover {
+        color: $color-orange;
+      }
+
+      .price-ad {
+        margin-top: 8px;
+
+        span {
+          font-size: 1.8rem;
+          font-weight: bold;
+        }
+      }
+
+      .details {
+        padding: 20px 0;
+        color: $color-blue-pastel;
+        font-weight: bold;
+
+        p{
+          line-height: 1.6;
+        }
+      }
+
+      img {
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        color: $color-orange;
+      }
+    }
+
+
+  }
+
+}
+
+section {
+  float: left;
+  width: 68%;
+
+  article {
+    height: 16rem;
+    width: 100%;
+
+    img {
+      float: left;
+      width: 30%;
+      height: 100%;
+      border-radius: 10px 0 0 10px;
+    }
+
+    .description {
+      float: right;
+      width: 65%;
+    }
+  }
+}
+
+aside {
+  float: right;
+  width: 30%;
+
+  article {
+    height: 40rem;
+
+    img {
+      border-radius: 10px 10px 0 0;
+      width: 100%;
+      height: 50%;
+    }
+
+    .description {
+      margin-left: 2rem;
+    }
+  }
+}
+
+footer {
+  clear: both;
+  margin-bottom: 0;
+}
+
 
 
 
@@ -586,6 +697,16 @@ body {
     }
   }
   
+  aside {
+  
+    article {
+      display: none;
+    }
+  }
+
+  section {
+    width: 100%;
+  }
 
     
 }
