--- a/style.css
+++ b/style.css
@@ -539,14 +539,17 @@ section .blank {
   border: solid 1px #8191a0;
   margin-bottom: 20px;
 }
-section button {
+section .save-button {
   background-color: #3838c5;
+  text-align: center;
   height: 5rem;
   color: #fff;
+  font-weight: bold;
+  padding: 1.6rem;
   font-size: 1.8rem;
   border: none;
 }
-section button img, section button .save-search-section {
+section .save-button img, section .save-button .save-search-section {
   display: inline-block;
   vertical-align: middle;
 }
