--- a/style.scss
+++ b/style.scss
@@ -613,10 +613,13 @@ section {
     margin-bottom: 20px;
   }
 
-  button {
+  .save-button {
     background-color: $color-blue;
+    text-align: center;
     height: 5rem;
     color:$color-white;
+    font-weight: bold;
+    padding: 1.6rem;
     font-size: 1.8rem;
     border: none;
 
